# Finance-Advanced-Research-Platform

./: .dockerignore  .env.example  .gitignore  10th_June.md  11th_June.md  12th_June.md  15th_June.md  16th_June.md  17th_June.md  18th_June.md  1st_June.md  22nd_June.md  23rd_June.md  24th_June.md  2nd_June.md  4th_june.md  5th_june.md  E2E_LIVE_TEST_AGENT_PROMPT.md  E2E_LIVE_VERIFICATION_REPORT.md  Enterprise Intelligence Platform v2.0 Requirements.docx  JAMES_REQUIREMENTS_VERIFICATION_REPORT.md  Jarvis Nexus Dashboard UI Spec (2).docx  PHASE1_E2E_VERIFICATION_REPORT.md  PHASE1_MVP_AGENT_PROMPT.md  PHASE1_MVP_COMPLETION_REPORT.md  PHASE1_MVP_REMAINING_20_PROMPT.md  PHASE2_50_STATE_REGISTRY_AGENT_PROMPT.md  PHASE2_COMPLETION_REPORT.md  README.md  SETUP.md  docker-compose.yml  ecosystem.config.js  james_requirements.md  package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: chat.py  compliance.py  demo.py  entities.py  evidence.py  finance.py  graph.py  intelligence.py  market.py  monitor.py  registry.py  reports.py  review.py  routes.py  search.py  search_os.py  skills.py  sources.py  tracking.py
apps/api/app/auth/: mfa.py  oidc.py  security.py
apps/api/app/connectors/: apify_connector.py  apollo_connector.py  browser_research_agent.py  financial_news_connector.py  private_company_connector.py
apps/api/app/core/: logging.py  settings.py
apps/api/app/db/: session.py
apps/api/app/models/: compliance.py  entities.py  evidence.py  models.py  monitor.py  registry.py  reports.py  (+3 more)
apps/api/src/: index.js
(+85 files in other folders)
