[project]
name = "identity-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "passlib[bcrypt]>=1.7",
  "pyjwt>=2.8",
  "python-json-logger>=2.0",
  "python-multipart>=0.0.9"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
