[project]
name = "identity-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.29",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "passlib[bcrypt]>=1.7",
  "pyjwt>=2.8",
  "python-json-logger>=2.0",
  "python-multipart>=0.0.9",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "boto3>=1.34",
  "opensearch-py>=2.4",
  "reportlab>=4.0",
  "python-docx>=1.1",
  "requests>=2.31",
  "pyotp>=2.9",
  "qrcode>=7.4"
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
